src/objects/ProjectOrganization__c.object
<CustomObject>
    <fields>
        <fullName>ContributionPercent__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Contribution Percent</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <description>Used for migration - Project Number is considered as external Id</description>
        <externalId>true</externalId>
        <label>External_ID</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>OrgIsActive__c</fullName>
        <formula>OrganizationString__r.isActive__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Org Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OrganizationString__c</fullName>
        <label>Organization String</label>
        <referenceTo>OrganizationString__c</referenceTo>
        <relationshipLabel>Project Organizations</relationshipLabel>
        <relationshipName>ProjectOrganizations</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <label>Project</label>
        <referenceTo>pse__Proj__c</referenceTo>
        <relationshipLabel>AECOM Organizations</relationshipLabel>
        <relationshipName>ProjectOrganizations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Primary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Secondary</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Project Organization</label>
    <nameField>
        <displayFormat>ProjOrg-{000000000}</displayFormat>
        <label>Project Organization Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Project Organizations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>EcoOrgmustbeactive</fullName>
        <active>false</active>
        <description>The organization string must be active in order to add it to a project</description>
        <errorConditionFormula>OrganizationString__r.isActive__c = False</errorConditionFormula>
        <errorMessage>The organization string must be active in order to add it to a project</errorMessage>
    </validationRules>
</CustomObject>